--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,49 @@ html, body {
 #root {
   height: 100%;
   width: 100%;
-  background-color: black;
+}
+
+.masked {
+  position: relative;
+  background: url("https://i.pinimg.com/564x/d9/54/87/d95487ffab31b9722b12eaf0e5709494.jpg") no-repeat center center;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  background-size: cover;
+}
+
+.masked::before {
+  content: "mackbook pro.";
+  position: absolute;
+  top: 0;
+  left: 0%;
+  width: 90%;
+  height: 100%;
+  background: url("https://i.pinimg.com/564x/d9/54/87/d95487ffab31b9722b12eaf0e5709494.jpg") no-repeat center center;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  background-size: cover;
+  filter: blur(40px);
+  opacity: 0.8;
+}
+
+.masked::after {
+  content: "mackbook pro.";
+  position: absolute;
+  top: 0;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background: url("https://i.pinimg.com/564x/d9/54/87/d95487ffab31b9722b12eaf0e5709494.jpg") no-repeat center center;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  background-size: cover;
+  filter: blur(20px);
+  opacity: 0.8;
+}
+
+.line {
+  border-bottom: 1px solid #333;
 }
